# financial-watermark-detector

./: .gitignore  README.md  __init__.py  data_loader.py  deployer.py  evaluator.py  feature_extractor.py  main.py  model_factory.py  monitor.py  preprocessor.py  pyproject.toml  requirements.txt  setup.py  test_system.py
configs/: default_config.yaml
data/: watermark_detection_dataset.csv
data/sample/: sample_data.csv
docs/: api_reference.md  architecture.md  report.md
examples/: basic_usage.py
model_versions/test_version_1.0/: version_info.json
models/: watermark_detector.joblib
notebooks/: 01_data_exploration.ipynb  01_数据分析.ipynb  02_特征工程实验.ipynb  03_模型对比.ipynb
reports/: corpus_summary.json  watermark_metrics.json  watermark_samples.json
src/: __init__.py  data_loader.py  detector.py  evaluator.py  feature_extractor.py  model_factory.py
src/financial_watermark_detector/: __init__.py  data.py  detector.py  pipeline.py  watermarking.py
src/utils/: __init__.py  helpers.py  visualization.py
tests/: test_detector.py  test_feature_extractor.py  test_watermarking.py
